--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -79,3 +79,37 @@ section {
   100% {
   }
 }
+
+.nav-link {
+  position: relative;
+}
+
+.nav-link::after {
+  transition: all 0.2s ease-in-out;
+  transform: scale(0);
+  position: absolute;
+  content: "";
+  background-color: blue;
+  top: 30%;
+  right: -20px;
+  width: 10px;
+  height: 10px;
+  border-radius: 100%;
+}
+
+.nav-link > div:hover {
+  animation: 300ms ease-out forwards bounce;
+}
+
+.nav-link:hover::after {
+  transform: scale(1);
+}
+
+@keyframes bounce {
+  40% {
+    transform: rotate(5deg);
+  }
+  80% {
+    transform: rotate(-5deg);
+  }
+}
